fix(work): fix missing css make dom visible before loadgin

--- a/assets/styles/templates/layouts/_work.scss
+++ b/assets/styles/templates/layouts/_work.scss
@@ -134,3 +134,17 @@
         }
     }
 }
+
+body.not-loaded .Work {
+    .Work__title {
+        width: 0;
+    }
+
+    h1 {
+        transform: translateY(calc(50vh - 1em - var(--padding-large)));
+    }
+
+    .js-content {
+        transform: translateY(100vh);
+    }
+}
